[add] card for tracks

--- a/index.html
+++ b/index.html
@@ -114,8 +114,54 @@
 
             <!-- Recently played -->
             <section id="played" class="px-15">
-                <h3>TITOLO</h3>
-                
+                <h3 class="pb-10">TITOLO</h3>
+                <div class="track d-flex f-wrap">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/metal_lifting.jpg" alt="metal_lifting">
+                        </div>
+                        <div class="card-text d-flex">
+                            <span class="track-title">Heavy Metal</span>
+                            <span class="artist">artista</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/metal_lifting.jpg" alt="metal_lifting">
+                        </div>
+                        <div class="card-text d-flex">
+                            <span class="track-title">Heavy Metal</span>
+                            <span class="artist">artista</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/metal_lifting.jpg" alt="metal_lifting">
+                        </div>
+                        <div class="card-text d-flex">
+                            <span class="track-title">Heavy Metal</span>
+                            <span class="artist">artista</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/metal_lifting.jpg" alt="metal_lifting">
+                        </div>
+                        <div class="card-text d-flex">
+                            <span class="track-title">Heavy Metal</span>
+                            <span class="artist">artista</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/metal_lifting.jpg" alt="metal_lifting">
+                        </div>
+                        <div class="card-text d-flex">
+                            <span class="track-title">Heavy Metal</span>
+                            <span class="artist">artista</span>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
         
